--- a/app/globals.css
+++ b/app/globals.css
@@ -47,6 +47,13 @@ h1, h2, h3 {
 
 .btn-primary {
   @apply p-2 pl-6 pr-6 mt-4 mb-14 cursor-pointer text-xl text-white bg-gradient-to-r from-orange-400 to-red-400 rounded-full font-bold flex items-center justify-center gap-1;
+  background-size: 200% auto;
+  background-image: linear-gradient(to right, theme("colors.orange.400"), theme("colors.red.400"), theme("colors.orange.400"));
+  transition: background-position 0.5s ease;
+}
+
+.btn-primary:hover {
+  background-position: right center;
 }
 
 .text-gradient {
